# stockholm

./: .gitignore  .gitlab-ci.yml  .gitmodules  .rsync-filter  Makefile  README.md  cac  cd.nix  ci.nix  cloudkrebs.nix  default.nix  deploy  flake.nix  infest  infest-cac-CentOS-7-64bit.sh  mu.nix  networking-configuration  root  run  shell.nix  wu.nix
.github/workflows/: repo-sync.yml
0make/lass/: cloudkrebs.makefile  mors.makefile  uriel.makefile
0make/makefu/: pnp.makefile
0make/tv/: cd.makefile  mkdir.makefile  nomic.makefile  rmdir.makefile  wu.makefile
1systems/lass/: cloudkrebs.nix  mors.nix  uriel.nix
1systems/makefu/: pnp.nix
1systems/tv/: cd.nix  mkdir.nix  nomic.nix  rmdir.nix  wu.nix
2configs/lass/: base.nix  browsers.nix  chromium-patched.nix  fastpoke-pages.nix  git-repos.nix  identity.nix  ircd.nix  (+8 more)
Zcerts/: charybdis_cd.crt.pem
Zhosts/: flap  gum  tsp
Zpubkeys/: deploy_wu.ssh.pub
doc/: Commit_Messages_Guideline.md  Issues.md
infest.d/: nixos-install.sh
jeschli/: default.nix  krops.nix  source.nix
kartei/: default.nix  trust-gpg.sh
krebs/: default.nix  kops.nix  krops.nix  nixpkgs-unstable.json  nixpkgs.json  populate.nix  source.nix  update-channel.sh  update-nixpkgs-unstable.sh  update-nixpkgs.sh
lass/: default.nix  kops.nix  krops.nix  source.nix  tombstone
lib/: cac.sh  cacnixos.sh  default.nix  eval-source.nix  genid.nix  git.nix  haskell.nix  impure.nix  net.sh  prelude.sh  pure.nix  shell.nix  svg-colors.json  types.nix  uri.nix  url.sh  xml.nix
makefu/: krops.nix  nixpkgs.json  source.nix  update-channel.sh  vacation-note.md
mb/: default.nix  krops.nix
miefda/: default.nix
modules/: base-cac-CentOS-7-64bit.nix  exim-cd.nix  exim.nix  iptables-cd.nix  nginx.nix  retiolum.nix  sanitize.nix  tools.nix  urxvt.nix  urxvtd.nix  users.nix  xserver.nix
mv/: source.nix
newbin/: nixos-query
next/: profile
nin/: default.nix  krops.nix  source.nix
nixpkgs/: default.nix  lib  pkgs
old/: Makefile  cac  default.nix  deploy
shared/: default.nix  source.nix
tv/: default.nix  krops.nix  source.nix  tombstone
tv/2configs/xserver/xmonad-tv/: Main.hs  default.nix  xmonad-tv.cabal
tv/5pkgs/haskell/th-env/: default.nix  th-env.cabal
tv/5pkgs/haskell/th-env/src/: THEnv.hs
tv/5pkgs/haskell/xmonad-tv/src/: Build.hs  Paths.hs  Shutdown.hs  main.hs  xmonad-tv.cabal
tv/5pkgs/haskell/xmonad-tv/src/Helpers/: Path.hs
tv/5pkgs/haskell/xmonad-tv/src/THEnv/: JSON.hs
tv/5pkgs/haskell/xmonad-tv/src/XMonad/: Extra.hs
tv/5pkgs/haskell/xmonad-tv/src/XMonad/Hooks/EwmhDesktops/: Extra.hs
(+2524 files in other folders)
