Author: tv
Build-Type: Simple
Cabal-Version: >= 1.2
License: MIT
Name: xmonad-tv
Version: 0

Executable xmonad
  Build-Depends:
    base,
    containers,
    filepath,
    scanner,
    X11,
    X11-xshape,
    xmonad,
    xmonad-contrib
  GHC-Options: -Wall -O3 -threaded -rtsopts
  Main-Is: Main.hs
