name: th-env
version: 1.0.0
-- license: https://creativecommons.org/licenses/by-sa/4.0/
license: OtherLicense
author: https://stackoverflow.com/users/9348482
homepage: https://stackoverflow.com/q/57635686
maintainer: tv <tv@krebsco.de>
build-type: Simple
cabal-version: >=1.10

library
  hs-source-dirs: src
  build-depends:
    base,
    template-haskell,
    text
  exposed-modules:
    THEnv
  default-language: Haskell2010
  ghc-options: -O2 -Wall
