name: xmonad-tv
version: 1.0.0
license: MIT
author: tv <tv@krebsco.de>
maintainer: tv <tv@krebsco.de>
build-type: Simple
cabal-version: >=1.10

executable xmonad
  main-is: main.hs
  build-depends:
    aeson,
    base,
    bytestring,
    containers,
    directory,
    extra,
    template-haskell,
    th-env,
    unix,
    X11,
    xmonad,
    xmonad-contrib,
    xmonad-stockholm
  other-modules:
    Helpers.Path,
    Paths,
    THEnv.JSON
  default-language: Haskell2010
  ghc-options: -O2 -Wall -threaded
