name: xmonad-tv
version: 1.0.0
license: MIT
author: tv <tv@krebsco.de>
maintainer: tv <tv@krebsco.de>
build-type: Simple
cabal-version: >=1.10

executable xmonad
  main-is: main.hs
  build-depends:
      base
    , X11
    , aeson
    , bytestring
    , containers
    , directory
    , extra
    , filepath
    , pager
    , unix
    , xmonad
    , xmonad-contrib
  other-modules:
    Shutdown
    XMonad.Hooks.EwmhDesktops.Extra
  default-language: Haskell2010
  ghc-options: -O2 -Wall
